feat: slim catalog with stable-id dedup and paged ingestion
Reuse the useful ingestion concepts without the extra layers:
- Offer dedup key is the source identity (source + external id) when the
  scanner provides one, else the content hash; a single unique constraint
  on (dedup key, creator) keeps ingestion idempotent at scale.
- OfferSource is cursor-paged (SourcePage); OfferIngestionService reports
  created/updated/unchanged and retains failed entries for replay.
- One CatalogWriter owns company resolution, dedup and enrichment.
- Offers and companies are paginated server-side; list endpoints batch-load
  their companies and offers to avoid N+1.
- Company listing becomes a paginated search.